apps/podinfo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    app.kubernetes.io/component: test
